edits from proofreading

--- a/packet/ans/probability.tex
+++ b/packet/ans/probability.tex
@@ -29,15 +29,14 @@
 \begin{answer}
     \renewcommand{\labelenumi}{(\alph{enumi})} 
     \begin{enumerate}
-        \item \textbf{Uniform.} The deck is shuffled, so a card is equally likely 
-        to be in any one place in the deck.
-        \item \textbf{Not uniform.} You are more likely to draw a lower card if 
-        you draw from the beginning of the deck instead of the end.
+        \item \textbf{Uniform.} The deck is shuffled, so any card is equally likely 
+        to be at the top of the deck.
+        \item \textbf{Not uniform.} Since the deck has only one correct "order", the first card to be drawn will always be the same.
         \item \textbf{Not uniform.} Though it fluctuates, weather generally follows 
         large-scale patterns that depend on the season, latitude and longitude,
         the air masses present, and so on. This is called climate. The reason 
         meteoroligists can predict the weather is precisely because it is 
-        not a uniformly random variable.
+        not a uniformly random variable: each day, certain outcomes are more likely than others (in the summer, for instance, it is very likely that the weather will be sunny, while snow has a near 0\% chance of occurring).
         \item \textbf{Uniform.} Every number is equally likely to be rolled.
         \item \textbf{Not uniform.} In fact, some birthdays are more likely to occur 
         than others. Summer birthdays are slightly more common, for instance.\footnotemark
@@ -77,7 +76,7 @@
 \end{answer}
 
 \begin{answer}
-    There are two ways of getting one heads outcome: (1) the first toss is heads 
+    There are two ways of getting heads once: (1) the first toss is heads 
     ($c_1=H$), and we don't do another coin toss, or (2) the first toss comes up tails,
     and the second one comes up heads ($c_1=T$ and $c_2=H$). 
     
@@ -89,6 +88,8 @@
         =& \frac{1}{2} + \frac{1}{4}\\
         =& \frac{3}{4}
     \end{align*}
+
+    You might also have realized that the only way \emph{not} to get heads once was to get tails twice (TT). In that case you could have calculated the probability as $1 - \Pr[TT] = 3/4$.
 \end{answer}
 
 \begin{answer}
@@ -99,10 +100,10 @@
         rolling and even number is $\frac{1}{6}+\frac{1}{6}+\frac{1}{6}=\frac{1}{2}$.
 
         Another way to see this is that our roll has to land in the set 
-        $\{2,4,6\}$ and not in $\{1,3,5\}$. Because even number happens 
+        $\{2,4,6\}$ and not in $\{1,3,5\}$. Because every number happens 
         with equal probability and the sets are of equal size, the dice 
         roll lands in each of the two sets with equal probability. So landing 
-        in one set happens with probability $\frac{1}{2}$.
+        in the even set happens with probability $\frac{1}{2}$.
         \item This happens if the first roll is a 1 \textbf{and} the second roll 
         is a 2. Each of those occurs with probability $\frac{1}{6}$, so the 
         answer is $\frac{1}{6}\cdot \frac{1}{6} = \frac{1}{6\cdot6}=\frac{1}{36}$.
@@ -131,13 +132,14 @@
         \item Either I roll a 5 or 6 on my first roll, or I roll a 1 and my second roll is 
         a 5 or 6:
         \begin{align*}
-            &\Pr[\text{first roll is }5]
-            +\Pr[\text{first roll is }6]\\
-            &+\left(\Pr[\text{second roll is }5 \mid \text{first roll is }1]+
-            \Pr[\text{second roll is }6 \mid \text{first roll is }1]\right)\\
-            &\cdot\Pr[\text{first roll is }1]\\
-            =&\frac{1}{6}+\frac{1}{6}+\left(\frac{1}{6}+\frac{1}{6}\right)\frac{1}{6}\\
-            =&\frac{1}{3}+\left(\frac{1}{3}\right)\frac{1}{6}\\
+            &\Pr[\text{first roll is 5 or 6}]
+            + \Pr[\text{first roll is 1 and second roll is 5 or 6}]\\
+            =&\left(\Pr[\text{first roll is }5]
+            +\Pr[\text{first roll is }6]\right)\\
+            &+\Pr[\text{first roll is 1}] \cdot
+            \left(\Pr[\text{second roll is 5}] + \Pr[\text{second roll is 6}]\right)\\
+            =&\left(\frac{1}{6}+\frac{1}{6}\right) + \frac{1}{6} \cdot \left(\frac{1}{6}+\frac{1}{6}\right)\\
+            =&\frac{1}{3}+\frac{1}{6}\left(\frac{1}{3}\right)\\
             =&\frac{1}{3}+\frac{1}{18}\\
             =&\frac{7}{18}
         \end{align*}
@@ -147,16 +149,16 @@
 \begin{answer}
     \renewcommand{\labelenumi}{(\alph{enumi})}
     \begin{enumerate}
-        \item \textbf{perfectly indistinguishable:} 
-        both $\left\{\frac{1}{2},\frac{1}{2}\right\}$
         \item \textbf{not perfectly indistinguishable:}
         the uniform distribution with all probabilities equal to 
         $\frac{1}{52}$ is not the same as the uniform distribution 
         with all probabilities $\frac{1}{6}\left(\frac{1}{2}\right)^3 
-        = \frac{1}{48}$.
+        = \frac{1}{48}$. The sample spaces are also different.
         \item \textbf{perfectly indistinguishable:}
-        $\left\{\frac{1}{4},3\left(\frac{1}{4}\right)\right\} 
-        = \left\{\frac{13}{52},\frac{39}{52}\right\} 
-        = \left\{\frac{1}{4},\frac{3}{4}\right\}$
+        $D_1 = \left\{3\left(\frac{1}{4}\right),\frac{1}{4}\right\}$ over the sample space $\{\text{yes}, \text{no}\}$ and 
+        $D_2 = \left\{\frac{39}{52},\frac{13}{52}\right\}$ over the same sample space. Since the sample spaces are the same and both of the probability distributions simplify to
+        $\left\{\frac{3}{4},\frac{1}{4}\right\}$, $D_1$ and $D_2$ are perfectly indistinguishable.
+        \item \textbf{not perfectly indistinguishable:} 
+        both distributions are $\left\{\frac{1}{2},\frac{1}{2}\right\}$, but $D_1$ is over the sample space $\{\text{even}, \text{odd}\}$ while $D_2$'s sample space is $\{H, T\}$.
     \end{enumerate}
 \end{answer}
