--- a/packet/ans/secretsharing.tex
+++ b/packet/ans/secretsharing.tex
@@ -58,12 +58,12 @@
     \end{pchstack}
 
     (Where if $\rec$ is run on the incorrect number of shares---anything except 
-    3 and $n$, respectively---the algorithms return $\perp$.)
+    $n$---the algorithm returns $\perp$.)
 \end{answer}
 
 \subsection{Formal Definitions*}
 \begin{sampleA}
-    The adversary should only be able to win about half the time. This is 
+    The person playing the role of the adversary should only be able to win about half the time. This is 
     because $s_i$ looks random to the adversary. The key part of the scheme 
     is that $s_1$ is chosen uniformly at random, thereby making both $s_1$ 
     and $s_2$ uniformly distributed and independent of $s$.
