--- a/packet/src/abstract.tex
+++ b/packet/src/abstract.tex
@@ -1,5 +1,5 @@
 \begin{center} \textbf{Introduction} \end{center}
 
-\indent In this problem set, you will learn how to use math to split secrets into pieces. This is the cryptographic technique known as secret sharing and is the basis for many useful tools being deployed by companies today.
+\indent In this problem set, you will learn how to use math to share a secret among a group of people so that they have to work together to learn the secret. This is the cryptographic technique known as \emph{secret sharing} and is the basis for many useful tools being deployed in the world today.
 
-One last note about reading mathematical texts: it is very normal when reading math to read a passage or even a single sentence several times before understanding it properly. Also, never trust the author! Check every claim and calculation (time permitting). Take your time and never give up. Let's talk math!
+Before we get started, a quick note about reading mathematical texts: it is very normal when reading math to read a passage or even a single sentence several times before understanding it properly. Also, never trust the author! Check every claim and calculation (time permitting). Take your time and never give up. Let's talk math!
