--- a/packet/src/conclusion.tex
+++ b/packet/src/conclusion.tex
@@ -10,10 +10,10 @@ understanding the techniques in many other subfields.
 
 \footnotetext{Most notably, secret sharing forms the basis of many 
 \emph{multiparty computation (MPC)} schemes. These allow multiple 
-parties, as the name implies, to compute functions over their secret 
+parties to compute functions over their secret 
 inputs. For example, the Boston Women’s Workforce Council organized 
-an effort which used MPC\cite[page 12]{bwwc} to calculate statistics 
-about the salaries of the workforce in about 16\% of the Boston area to 
-show that the gender pay gap was wider than what the U.S. Bureau of Labor
+an effort in which companies used MPC\cite[page 12]{bwwc} to calculate statistics 
+about the salaries of the workforce in approximately 16\% of the Boston area, 
+showing that the gender pay gap was wider than what the U.S. Bureau of Labor
 Statistics reported\cite{bwwc}. MPC was necessary because companies needed 
 to keep their data on employee salaries secret due to privacy concerns.}
