--- a/packet/src/secretsharing.tex
+++ b/packet/src/secretsharing.tex
@@ -8,7 +8,7 @@ nothing about the secret $s$.
 
 These properties are important for practical uses of secret sharing. For 
 example, using secret sharing, we can distribute shares among a large set of people so that no one 
-knows the secret but some subset of them can recover the secret if they 
+learns the secret, but some subset of them can recover the secret if they 
 pool their information.
 
 We'll be a little more rigorous about these definitions soon, but first, let's 
@@ -27,12 +27,12 @@ Here is a simple scheme for sharing integers using nothing but addition and subt
 \procedure{$\share(s)$}{%
     % \pccomment{where $s \in \{0, \ldots, 2^\lambda\}$ }\\
     s_1 \sample \new{\{0, \ldots, 2^\lambda-1\}} \\
-    s_2 \gets s-s_1 \mod{2^\lambda}\\
+    s_2 := s-s_1 \bmod{2^\lambda}\\
     \pcreturn (s_1, s_2)
 }
 \pchspace
 \procedure{$\rec(s_1, s_2)$}{%
-    \pcreturn s_1 + s_2 \mod{2^\lambda}
+    \pcreturn s_1 + s_2 \bmod{2^\lambda}
 }
 }
 \end{pchstack}
@@ -43,24 +43,24 @@ Here is a simple scheme for sharing integers using nothing but addition and subt
 % \todo{In a future iteration, maybe introduce the na\"ive scheme (without 
 % modulus) and point out the issues to slowly adjust the scheme.}
 
-Let's go through the notation together. First, on the left, we see that 
-the $\share$ algorithm is being defined. (An \emph{algorithm} is simply a procedure.)
-The parentheses after the name tell us that it takes an input $s$, which in 
-this context is the secret to be shared. The first line tells us to sample\footnotemark~
-an element from the set $\{0, \ldots, 2^\lambda-1\}$ and call it $s_1$. The 
-dots in the set are shorthand for all the numbers in between. For instance, 
-when $\lambda=10$, we sample $s_1$ uniformly from the set $\{0, 1, 2, 3, \ldots, 
-1021, 1022, 1023\}$. \new{The value of $\lambda$ would be chosen beforehand by 
-the person or people running \share~and \rec.}
+Let's go through the notation together. First, in the left column, we can see that 
+we are defining an algorithm called $\share$. (An \emph{algorithm} is simply a procedure.)
+The parentheses after the algorithm name tell us that it takes as input a value $s$, which in 
+this context is the secret to be shared. The first line of the algorithm tells us to sample
+a uniform element\footnotemark~ from the set $\{0, \ldots, 2^\lambda-1\}$ and call it $s_1$. 
+(The dots in the set are shorthand for all the numbers in between 0 and $2^\lambda-1$.) For instance, 
+when $\lambda=10$, this line tells us to sample $s_1$ uniformly from the set $\{0, 1, 2, 3, \ldots, 
+1021, 1022, 1023\}$. In practice, the value of $\lambda$ would be chosen beforehand by 
+the person or people running \share~and \rec.
 \footnotetext{We introduced the symbol $\sample$ in Section~\ref{sec:prob}.}
 
-\new{The next line says to compute $s_2$ as the difference $s-s_1$ \emph{modulo} 
+The next line says to set $s_2$ to the difference $s-s_1$ \emph{modulo} 
 the number $2^\lambda$. This means that we ``wrap around'' to $2^\lambda-1$ 
-if the difference goes below zero: $-1$ is $2^\lambda-1$ instead, $-2$ is 
+if the difference goes below zero: $-1$ becomes $2^\lambda-1$ instead, $-2$ becomes 
 $2^\lambda-2$, and so on.
 For example, if $s=3$ and $s_1=5$, $s-s_1 = 3-5 = -2$. With $\lambda=10$,
 we instead ``wrap around'' to $2^\lambda-2=1024-2=1022$. This modulo operation has 
-important implications for privacy, as we'll talk about soon.}
+important implications for privacy, as we'll talk about soon.
 
 \new{We're almost done working through the \share~algorithm. The next and final 
 line says to return (output) a pair of numbers: the random number $s_1$ and 
@@ -68,7 +68,7 @@ the difference $s_2$.}
 
 So $\share$ converts a secret $s$ into a two shares. Okay, so how can 
 two people, each with one of the shares, get back the original secret? That's
-what the right side of Figure~\ref{fig:additiveSS} tells us. The reconstruction 
+what the right column of Figure~\ref{fig:additiveSS} tells us. The reconstruction 
 algorithm $\rec$ takes two integers (call them $s_1$ and $s_2$) and returns their 
 sum,
 \new{again modulo $2^\lambda$. The ``wrapping'' goes both ways, which in this case 
@@ -77,7 +77,7 @@ means that if the sum is greater than $2^\lambda-1$, we wrap back around to
 
 \begin{example}
     % \color{blue}
-    Let $\lambda=10$. We'll work through an execution of the \share~and
+    Let $\lambda=10$. Let's work through an execution of the \share~and
     \rec~algorithms with $s=4$ to get more comfortable with the modulus 
     operation.
 
@@ -87,19 +87,19 @@ means that if the sum is greater than $2^\lambda-1$, we wrap back around to
 
     Now let's plug these shares into the reconstruction algorithm: 
     $\rec(10,1018)$ returns $10+1018 \mod 2^\lambda = 1028 \mod 2^\lambda 
-    = 1028-1024 = 4$. That's exactly the original secret.
+    = 1028-1024 = 4$. That's exactly the original secret!
 \end{example}
 
 \new{For values of $s$ in $\{0,\ldots,2^\lambda-1\}$,}
 If $\rec$ receives two shares that were produced by the $\share$ algorithm, 
 it will return $s_1 + (s-s_1) \new{\mod 2^\lambda} = s$. This means the scheme 
-has correctness! \new{If $s$ is not in that set, though, we run into some 
+has \emph{correctness}. If $s$ is not in that set, though, we run into some 
 problems: since the modulus operation will always reduce to a number 
 in the range $\{0, \ldots, 2^\lambda-1\}$, \rec~will always output a number 
 in that range. This means that if $s$ is not one of these numbers, 
 \rec~will not output it, violating correctness. We'll have to limit ourselves 
 to sharing only numbers in that set, which just means we need to pick 
-$\lambda$ in a way that will include all the numbers we expect to share.}
+$\lambda$ in a way that will include all the numbers we expect to share.
 
 What about privacy? 
 
@@ -113,7 +113,7 @@ we picked it independently of $s$), so it has nothing to do with $s$. This
 is the case with the other share as well. If we're given a number $s_2$ 
 calculated as $s-s_1 \new{\pmod{2^\lambda}}$, we don't know the other share 
 $s_1$. \new{With $s$ and $s_1$ both in $\{0, \ldots, 2^\lambda-1\}$, $s_2$ will 
-range anywhere from 0 to $2^\lambda-1$. Each of these values of $s_2$ could 
+range anywhere from 0 to $2^\lambda-1$, and all of these values of $s_2$ are equally  likely because $s_1$ was chosen uniformly at random. That means each of these values of $s_2$ could 
 have occurred for any value of $s$. For instance, if $s_2=0$, it could be 
 that $s=0$ and $s_1=0$; or maybe $s=1$ and $s_1=1$; and so on, as long as 
 $s=s_1$ (but $s_1$ is unknown!).}
@@ -133,7 +133,7 @@ In this case we say that $s_1$ ``masks'' $s$.
 % \end{align*}
 
 These arguments for correctness and privacy are not very rigorous. We'll 
-take a look at how cryptographers prove these properties in Sections~\ref{sec:formal-defs} 
+take a look at how cryptographers formally prove these properties in Sections~\ref{sec:formal-defs} 
 and \ref{sec:proof}.
 
 \begin{exercise}
@@ -161,7 +161,7 @@ and \ref{sec:proof}.
     algorithm?
 \end{exercise}
 
-\subsection{Formal Definitions*}\label{sec:formal-defs}
+\subsection[Formal Definitions*]{Formal Definitions\astfootnote{optional section}}\label{sec:formal-defs}
 
 We'll now formally define what a secret sharing scheme is and the 
 properties such a scheme might have, using the standard notation in 
@@ -243,11 +243,11 @@ Here's a visual representation:
     % \fbox{%
     \procedure{$\share(s)$}{%
         s_1 \sample \{1, \ldots, 2^\lambda\} \\
-        \pcreturn (s_1, s + s_1)
+        \pcreturn (s_1, s + s_1 \bmod{2^\lambda})
     }
     \pchspace
     \procedure{$\rec(s_1, s_2)$}{%
-        \pcreturn s_1 + s_2
+        \pcreturn s_1 + s_2 \bmod{2^\lambda}
     }
     % }
     \end{pchstack}
@@ -285,7 +285,7 @@ Here's a visual representation:
     with both $\D$ and $\D_s$ being the set of integers.
     But is it correct? Answer to yourself again before reading on.
 
-    This example is a little trickier because it works in some cases -- but not all! 
+    This example is a little trickier because it works in some cases---but not all! 
     When $s=15$, 
     \[
         \rec(\share(15)) = \rec(3,5) = 3\cdot 5 = 15,
@@ -297,9 +297,9 @@ Here's a visual representation:
     \]
     which is not equal to 14.
     So this scheme isn't always correct, and since the definition of correctness 
-    is all or nothing\footnotemark, the scheme doesn't have correctness.
+    is ``all or nothing''\footnotemark, the scheme doesn't have correctness.
     \footnotetext{we said $\rec(\share(s)) = s$ must hold for \emph{all} 
-    $s \in \D$. But 14 was an integer for which the equality didn't hold.}
+    $s \in \D$. But 14 was an integer $s$ for which the equality didn't hold.}
 \end{example}
 
 \begin{example}\label{ex:floor}
@@ -320,7 +320,7 @@ Here's a visual representation:
     This still meets Definition~\ref{def:ss} with the same input and share 
     domains. Is the adjusted scheme correct now?
 
-    What happens if we share the number 14? First, we pick $s_1$ randomly.
+    What happens if we share the number 14 again with this new scheme? First, we pick $s_1$ randomly.
     Say we happen to choose 7. Then 
     \[
         \rec(\share(14)) = \rec(7, 2) = 14,
@@ -332,7 +332,7 @@ Here's a visual representation:
     \]
     which is not 14!
 
-    When $s=37$, a similar thing happens: the scheme is correct for some 
+    For the secret $s=37$, a similar thing happens: the scheme is correct for some 
     choices of $s_1$, but not others:
     \begin{align*}
         s_1 &= 1: &\rec(\share(37)) &= \rec(1, 37) = 37 = 37~\text{\cmark}\\
@@ -355,8 +355,6 @@ Now that we understand correctness, let's look at privacy.
 
 \subsubsection{Privacy}
 
-\todo{covers only 1 corrupted party; change this to cover up to $n-1$ 
-corruptions.}
 In cryptography, security properties like privacy are defined using what 
 are called ``games''. A game is a challenge in which an attacker (called 
 the \emph{adversary} and usually denoted by the curly letter $\mathcal{A}$) is given 
@@ -366,40 +364,37 @@ the security property of the scheme.
 
 For example, in the case of privacy for a secret sharing scheme, we give 
 the attacker a share and ask it to give us some information about the 
-secret it came from. This should be almost impossible if the scheme is 
+secret it came from. This should be impossible if the scheme is 
 private.
 
 More specifically, the \emph{secret sharing privacy game} captures 
 the following scenario. Alice wants to share some secret $s$ so that she
-can distribute its pieces to her friends. Maybe $s$ is the combination to
+can distribute its pieces to her friends. (Maybe $s$ is the combination to
 her safe holding all her savings, and if something happens to her she wants
 her friends to be able to access them and distribute them according to
-her will. Unbeknownst to her, her friend Eve wants to go against Alice's
+her will.) Unbeknownst to her, her friend Eve wants to go against Alice's
 wishes and get into the safe herself to steal Alice's money.
 
 Let's think about the worst case, in which Eve is very powerful: she knows 
 that the safe is locked with equal probability by one of two combinations
-$x_0$ or $x_1$; even worse, she was able to choose $x_0$ and $x_1$ by 
-somehow influencing Alice as she chose her combination; and \new{she's even 
+$x_0$ or $x_1$; even worse, she was able to decide these two possible combinations herself by 
+somehow influencing Alice as she chose her combination; and she's even 
 even managed to figure out how to peek at some of the other friends' shares
-(at most $n-1$, including herself).}
-% control
-% where in the list of friends she is so that she can pick whether she gets
-% share number 1, 2, \ldots, $n-1$, or $n$. 
+(in the worst case all but one of them, which means she knows the values of $n-1$ shares including her own).
 Once Alice has shared her
 combination among her friends, Eve will see \new{at most $n-1$ shares (her
-choice which ones) which are all the result of either $\share(x_0)$ or $\share(x_1)$.}
+choice which ones), and she wants to figure out whether this set of $n-1$ shares was output by $\share(x_0)$ or $\share(x_1)$.}
 
-What sort of protection does Alice need? Even with all the information 
-known to Eve (her knowledge of $x_0, x_1, i$, \new{$n-1$ shares}), we don't want her to figure
+What sort of protection does Alice need from Eve? Despite all the information 
+Eve knows (her knowledge of $x_0, x_1$, $n-1$ shares, and the position of the last (unknown) share), we don't want her to figure
 out whether she got a share of $x_0$ or $x_1$, because if she did, she'd
 be able to unlock the safe!
 
 Here is the formal privacy game for any secret sharing scheme $\ss =
 (\share,\allowbreak \rec)$. (You can think of $\A$ as Eve.)
 \begin{enumerate}
-    \item The adversary \A~picks two values $x_0, x_1$ and a \new{set $I$ 
-    of size at most $n-1$ of} numbers between 1 and $n$.
+    \item The adversary \A~picks two values $x_0, x_1$ and a set $I$ 
+    of size at most $n-1$ consisting of numbers between 1 and $n$.
     \item The game flips a coin to randomly choose one of the two values 
     $x_0,x_1$ to share.
     This is usually written as picking a random value $b$ from the set 
@@ -440,7 +435,7 @@ the comments, which are there to explain the notation):
 
 Where did this definition of the game come from, you might ask? The simple 
 answer is that usually the person who invents a new cryptographic 
-primitive (what we call a general idea like secret sharing or 
+primitive (the general idea like secret sharing or 
 encryption, as opposed to a specific algorithm for actually achieving 
 what it describes) also gives definitions for its potential properties. 
 This includes defining security games. (Sometimes, others come along 
@@ -485,10 +480,10 @@ be able to win:
     \]
 
     is small\footnotemark. This quantity is called $\A$'s \emph{advantage}.
-    \footnotetext{In cryptography, this usually means bounded by a \emph{negligible} 
-    function. For the purposes of this packet, ``small'' means very close to 0, 
+    \footnotetext{In cryptography, this usually means smaller than what's called a \emph{negligible} 
+    function, but for the purposes of this packet, ``small'' means very close to 0: 
     for example $\frac{1}{2^\lambda}$, which for $\lambda=10$ is $\frac{1}{1024}$. 
-    Since this quantity ranges from 0 to $\frac{1}{2}$, a value like $\frac{1}{4}$ 
+    Since the quantity above ranges from 0 to $\frac{1}{2}$, a value like $\frac{1}{4}$ 
     or $\frac{1}{8}$ is not small.}
 \end{definition}
 
@@ -529,7 +524,7 @@ assume that all schemes are secret sharing schemes that meet Definition~\ref{def
 
     Let's put ourselves in the adversary's shoes. We want to win the 
     privacy game. First, we get to pick two numbers $x_0, x_1 \in \D$ and 
-    an index $i$. Let's say $x_0 = 18$ and $x_1 = 24$. We'll let $i=2$ 
+    a set of indices $I$ (since $n=2$, we only get to pick one index so $I$ will consist of a single value $i$). Let's say $x_0 = 18$ and $x_1 = 24$. We'll let $i=2$ 
     (it doesn't actually matter what $i$ is in this case). Now the game 
     picks a random $b$ unknown to us and shares $x_b$. It'll give us the 
     second share, $s_2$. 
@@ -557,7 +552,7 @@ the same tens place and then ask for the $i=1$ share (the tens digit).
 If it does this, it can't tell the shares apart, since they'll have the same
 value. Our definition is formulated to get around issues like this: to 
 show a scheme is secure, we need to show that there is \emph{no} adversary 
-with a not-small advantage. This means we only need to think about what the 
+with a ``not-small'' advantage (``for all adversaries $\A$''). This means we only need to think about what the 
 cleverest way to break a scheme would be, and show that even that is 
 impossible.
 
@@ -566,12 +561,12 @@ can arise. There are examples of cryptographers publishing papers
 introducing new, ``secure'' schemes that end up being broken. And yet 
 these schemes had proofs of security! Especially for complicated schemes, 
 it sometimes turns out that the authors didn't think of the most clever 
-adversary to attack the scheme, \new{so the proof is incorrect}. In other cases, they might assume that 
+adversary to attack the scheme, so the proof is incorrect. In other cases, they might assume that 
 something is hard to do, so even if a clever adversary realizes that this 
 is the best way to break the scheme it won't be able to pull off this 
 kind of attack --- but then someone discovers a way to solve that 
-hard problem. \new{This means the proof is correct, but it rests on an 
-incorrect assumption, so its conclusion doesn't hold in the real world.} 
+hard problem. In that case, the proof is correct, but it rests on an 
+incorrect assumption, so its conclusion doesn't hold in the real world.
 (For example, RSA cryptography, introduced in 1977\cite{rsa},
 is based on the difficulty of factoring integers. But in 1994, Peter Shor 
 discovered a fast way to factor integers\cite{shor} --- if you have a 
@@ -616,7 +611,7 @@ you can take a look at the RSA cryptography packet!)
     \end{pchstack}
 \end{bonus}
 
-\subsection{Proving Security*}\label{sec:proof}
+\subsection[Proving Security*]{Proving Security\astfootnote{optional section}}\label{sec:proof}
 
 So far, we've only seen secret sharing schemes that were not private.
 Let's work through a case in which we \emph{can} prove privacy, using the additive secret sharing 
