--- a/packet/src/shamir.tex
+++ b/packet/src/shamir.tex
@@ -21,7 +21,7 @@ is multiplied by a number called its coefficient. Here's an example:
     x^2 - 4x + 3
 \]
 
-The standard form for a polynomial in one variable (called a univariate polynomial) is 
+The standard form for a polynomial in one variable ($x$ in this case) is 
 \begin{equation}\label{eqn:std-form}
     a_n x^n + a_{n-1} x^{n-1} + \ldots + a_2 x^2 + a_1 x + a_0
 \end{equation}
@@ -246,7 +246,7 @@ actually have these built-in, so you don't need to know the details; you just
 plug points in and out comes a polynomial! In case you want to know more, though,
 the next section explains how one of these techniques works.
 
-\subsubsection{Lagrange Interpolation*}\label{sec:lagrange}
+\subsubsection[Lagrange Interpolation*]{Lagrange Interpolation\astfootnote{optional section}}\label{sec:lagrange}
 
 In this section we'll learn about one method of doing polynomial interpolation 
 called \emph{Lagrange interpolation}. It's described by a single equation:
@@ -342,7 +342,7 @@ what we want.}
 
 Let's work through an example using the degree-1 polynomial we plotted in Section~\ref{sec:unique}:
 we'll use the points $(1,1), (3,5)$ to recover the equation of the line. Remember that,
-in this packet, we start numbering the elements of a set at 0, so $(x_0,y_0)
+in this section, we start numbering the elements of a set at 0, so $(x_0,y_0)
 = (1,1)$ and $(x_1, y_1) = (3,5)$.
 
 \begin{example}
@@ -451,16 +451,16 @@ Now we can simplify $P(x)$ to get:
 and again we've arrived at the same polynomial we graphed.
 \end{example}
 
-\begin{exercise}
+\begin{bonus}
     Using the points and expressions in Example~\exref{ex:lagrange2},
-    evaluate $\ell_0(x), \ell_1(x), \ell_2(x)$ at the following points:
+    evaluate each of the polynomials $\ell_0(x), \ell_1(x), \ell_2(x)$ at the following points:
     \renewcommand{\labelenumi}{(\alph{enumi})} 
     \begin{enumerate}
         \item $x_0$
         \item $x_1$
         \item $x_2$
     \end{enumerate}
-\end{exercise}
+\end{bonus}
 
 \begin{bonus}
     Use Lagrange interpolation to find the unique degree-2 
@@ -643,7 +643,7 @@ causing the interpolation algorithm to return a different
 polynomial besides $f$. In that case, $f(0)$ might not equal $s$ 
 and we'd recover the wrong secret!
 
-This doesn't violate correctness, however, because in that case 
+This doesn't violate correctness because in that case 
 we aren't running \rec~on outputs of the \share~algorithm, so 
 the correctness definition doesn't apply. Instead, what's happening 
 is that our scheme fails when the parties don't behave honestly.
@@ -658,9 +658,9 @@ packet.
     Visit \url{https://bit.ly/ShamirSS} in your browser. This is a 
     Google Colab notebook written in the Python programming language. 
     It already has the functions \share~and \rec~from Shamir's secret 
-    sharing scheme. Work through the examples in the notebook to 
+    sharing scheme. Work through the examples there to 
     share and reconstruct any numbers you want using this scheme, 
-    then read on to find out how to share secret messages!
+    then read on in the notebook to find out how to share secret messages!
 \end{exercise}
 
 % TODO: if we use this exercise, must explain why $f$ needs to 
